update picker dialog with type